# visorepbd

./: .babelrc  .bootstraprc  .eslinignore  .eslintrc.js  .eslintrc.json  .gitignore  Makefile  README.md  TODO  babel.config.json  package-lock.json  package.json  postcss.config.js  requirements.txt  server.js  webpack.config.js
app/: constants.js  cteepbd.js  energycalculations.js  epbdutils.js  index.js  index.template.html  main.js  test.js  utils.js  vecutils.js
app/actions/: actions.js
app/components/: About.jsx  AboutPage.jsx  ActionsPanel.jsx  App.jsx  Base.jsx  Chartist.jsx  ChartsByCarrier.jsx  ChartsByUse.jsx  ChartsContainer.jsx  Component.jsx  ComponentList.jsx  Components.jsx  DetailsChart.jsx  DetailsChartCarriers.jsx  DetailsJSON.jsx  EPChart.jsx  EnergyComponentChart.jsx  EnergyComponentEditor.jsx  EnergyComponentList.jsx  EnergyComponentsList.jsx  EnergyComponentsTab.jsx  EnergyComponentsTable.jsx  Footer.jsx  GlobalVarsControl.jsx  Graphics.jsx  HelpPage.jsx  IndicatorsChart.jsx  LoadDataPage.jsx  MainPage.jsx  ModalContainer.jsx  NavBar.jsx  Navigation.jsx  NumInput.jsx  PieChart.jsx  TabList.jsx  ValuesEditor.jsx  WeightingFactors.jsx  WeightingFactorsPage.jsx  base.jsx  myepbdjs.js  (+1 more)
app/css/: style.scss
app/examples/: broken_input.csv  cteEPBD-N_R09_unif-ET5-V048R070-C1_peninsula.csv  ejemplo1PV.csv  (+27 more)
deployresources/: Makefile  epbdpanel.nginx.conf  epbdpanel.supervisor.conf  gunicorn_start.bash  production.py  visorepbd.nginx.conf
epbdserver/: manage.py
wasm/: Cargo.toml  LICENSE_MIT  Makefile  README.md
wasm/src/: lib.rs
(+23 files in other folders)
